auto add dans la db a la creation de toile, la save en json c'est pas pour tout de suite

--- a/public_html/toile_cree/cree_toile.html
+++ b/public_html/toile_cree/cree_toile.html
@@ -17,6 +17,9 @@
             <tr>
                 <td>largeur</td><td><input type="text" name="largeur"></td>
             </tr>
+            <tr>
+                <td>description</td><td><input type="text" name="description"></td>
+            </tr>
         </table>
         <input type="submit" value="créer">
     </form>
